@@ -1,3 +1,7 @@
+2005-09-29  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-filter.c: Fix bug #317549
+	
 2005-09-25  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-structure.c:
